@@ -12,9 +12,9 @@ import it.gov.pagopa.receipt.pdf.helpdesk.utils.TemplateDataField;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
-import java.util.Collection;
-import java.util.Collections;
-import java.util.List;
+import java.math.BigDecimal;
+import java.text.NumberFormat;
+import java.util.*;
 import java.util.concurrent.atomic.AtomicReference;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -77,10 +77,13 @@ class BuildTemplateServiceImplTest {
     private static final String NOT_PAGO_PA_CHANNEL = "NOT_PAGO_PA_CHANNEL";
     private static final String ID_PA = "idPa";
     private static final String USER_NAME = "user_name";
-    private static  final String USER_SURNAME = "user_surname";
+    private static final String USER_SURNAME = "user_surname";
     private static final String USER_FORMATTED_FULL_NAME = "user_name user_surname";
     private static final String USER_TAX_CODE = "user tax code";
     public static final String PAGOPA_PA_CHANNEL_ID = "pagopa channel";
+    public static final String RECEIPT_ID = "receipt-id";
+    public static final String BIZ_EVENT = "bizEvent";
+    public static final String RECEIPT = "receipt";
     private BuildTemplateServiceImpl buildTemplateService;
 
     @BeforeEach
@@ -94,7 +97,7 @@ class BuildTemplateServiceImplTest {
 
     @Test
     void mapTemplateAllFieldsSuccessCompleteTemplateAndIOChannel() {
-        BizEvent event = BizEvent.builder()
+        List<BizEvent> bizEventList = Collections.singletonList(BizEvent.builder()
                 .id(BIZ_EVENT_ID)
                 .idPaymentManager(BIZ_EVENT_ID)
                 .debtorPosition(DebtorPosition.builder()
@@ -142,11 +145,12 @@ class BuildTemplateServiceImplTest {
                                 .build())
                         .build())
                 .eventStatus(BizEventStatusType.DONE)
-                .build();
-        Receipt receipt = Receipt.builder().eventData(EventData.builder().cart(List.of(CartItem.builder().subject(REMITTANCE_INFORMATION).build())).build()).build();
+                .build()
+        );
+        Receipt receipt = Receipt.builder().eventId(BIZ_EVENT_ID).eventData(EventData.builder().amount(FORMATTED_GRAND_TOTAL).cart(List.of(CartItem.builder().subject(REMITTANCE_INFORMATION).build())).build()).build();
 
         AtomicReference<ReceiptPDFTemplate> atomicReference = new AtomicReference<>();
-        assertDoesNotThrow(() -> atomicReference.set(buildTemplateService.buildTemplate(event, GENERATED_BY_DEBTOR, receipt)));
+        assertDoesNotThrow(() -> atomicReference.set(buildTemplateService.buildTemplate(bizEventList, GENERATED_BY_DEBTOR, receipt)));
 
         ReceiptPDFTemplate receiptPdfTemplate = atomicReference.get();
 
@@ -189,7 +193,7 @@ class BuildTemplateServiceImplTest {
 
     @Test
     void mapTemplateAllFieldsSuccessCompleteTemplateAndIOChannelAndDateZonedDSTWinter() {
-        BizEvent event = BizEvent.builder()
+        List<BizEvent> bizEventList = Collections.singletonList(BizEvent.builder()
                 .id(BIZ_EVENT_ID)
                 .idPaymentManager(BIZ_EVENT_ID)
                 .debtorPosition(DebtorPosition.builder()
@@ -237,11 +241,11 @@ class BuildTemplateServiceImplTest {
                                 .build())
                         .build())
                 .eventStatus(BizEventStatusType.DONE)
-                .build();
-        Receipt receipt = Receipt.builder().eventData(EventData.builder().cart(List.of(CartItem.builder().subject(REMITTANCE_INFORMATION).build())).build()).build();
+                .build());
+        Receipt receipt = Receipt.builder().eventId(BIZ_EVENT_ID).eventData(EventData.builder().amount(FORMATTED_GRAND_TOTAL).cart(List.of(CartItem.builder().subject(REMITTANCE_INFORMATION).build())).build()).build();
 
         AtomicReference<ReceiptPDFTemplate> atomicReference = new AtomicReference<>();
-        assertDoesNotThrow(() -> atomicReference.set(buildTemplateService.buildTemplate(event, GENERATED_BY_DEBTOR, receipt)));
+        assertDoesNotThrow(() -> atomicReference.set(buildTemplateService.buildTemplate(bizEventList, GENERATED_BY_DEBTOR, receipt)));
 
         ReceiptPDFTemplate receiptPdfTemplate = atomicReference.get();
 
@@ -284,7 +288,7 @@ class BuildTemplateServiceImplTest {
 
     @Test
     void mapTemplateAllFieldsSuccessCompleteTemplateAndIOChannelAndDateZonedDSTSummer() {
-        BizEvent event = BizEvent.builder()
+        List<BizEvent> bizEventList = Collections.singletonList(BizEvent.builder()
                 .id(BIZ_EVENT_ID)
                 .idPaymentManager(BIZ_EVENT_ID)
                 .debtorPosition(DebtorPosition.builder()
@@ -332,11 +336,11 @@ class BuildTemplateServiceImplTest {
                                 .build())
                         .build())
                 .eventStatus(BizEventStatusType.DONE)
-                .build();
-        Receipt receipt = Receipt.builder().eventData(EventData.builder().cart(List.of(CartItem.builder().subject(REMITTANCE_INFORMATION).build())).build()).build();
+                .build());
+        Receipt receipt = Receipt.builder().eventId(BIZ_EVENT_ID).eventData(EventData.builder().amount(FORMATTED_GRAND_TOTAL).cart(List.of(CartItem.builder().subject(REMITTANCE_INFORMATION).build())).build()).build();
 
         AtomicReference<ReceiptPDFTemplate> atomicReference = new AtomicReference<>();
-        assertDoesNotThrow(() -> atomicReference.set(buildTemplateService.buildTemplate(event, GENERATED_BY_DEBTOR, receipt)));
+        assertDoesNotThrow(() -> atomicReference.set(buildTemplateService.buildTemplate(bizEventList, GENERATED_BY_DEBTOR, receipt)));
 
         ReceiptPDFTemplate receiptPdfTemplate = atomicReference.get();
 
@@ -379,7 +383,7 @@ class BuildTemplateServiceImplTest {
 
     @Test
     void mapTemplateAllFieldsSuccessCompleteTemplateAndIOChannelAndDateZonedWithMillisecondsDSTWinter() {
-        BizEvent event = BizEvent.builder()
+        List<BizEvent> bizEventList = Collections.singletonList(BizEvent.builder()
                 .id(BIZ_EVENT_ID)
                 .idPaymentManager(BIZ_EVENT_ID)
                 .debtorPosition(DebtorPosition.builder()
@@ -427,11 +431,11 @@ class BuildTemplateServiceImplTest {
                                 .build())
                         .build())
                 .eventStatus(BizEventStatusType.DONE)
-                .build();
-        Receipt receipt = Receipt.builder().eventData(EventData.builder().cart(List.of(CartItem.builder().subject(REMITTANCE_INFORMATION).build())).build()).build();
+                .build());
+        Receipt receipt = Receipt.builder().eventId(BIZ_EVENT_ID).eventData(EventData.builder().amount(FORMATTED_GRAND_TOTAL).cart(List.of(CartItem.builder().subject(REMITTANCE_INFORMATION).build())).build()).build();
 
         AtomicReference<ReceiptPDFTemplate> atomicReference = new AtomicReference<>();
-        assertDoesNotThrow(() -> atomicReference.set(buildTemplateService.buildTemplate(event, GENERATED_BY_DEBTOR, receipt)));
+        assertDoesNotThrow(() -> atomicReference.set(buildTemplateService.buildTemplate(bizEventList, GENERATED_BY_DEBTOR, receipt)));
 
         ReceiptPDFTemplate receiptPdfTemplate = atomicReference.get();
 
@@ -474,7 +478,7 @@ class BuildTemplateServiceImplTest {
 
     @Test
     void mapTemplateAllFieldsSuccessCompleteTemplateAndIOChannelAndDateZonedWithMillisecondsDSTSummer() {
-        BizEvent event = BizEvent.builder()
+        List<BizEvent> bizEventList = Collections.singletonList(BizEvent.builder()
                 .id(BIZ_EVENT_ID)
                 .idPaymentManager(BIZ_EVENT_ID)
                 .debtorPosition(DebtorPosition.builder()
@@ -522,11 +526,11 @@ class BuildTemplateServiceImplTest {
                                 .build())
                         .build())
                 .eventStatus(BizEventStatusType.DONE)
-                .build();
-        Receipt receipt = Receipt.builder().eventData(EventData.builder().cart(List.of(CartItem.builder().subject(REMITTANCE_INFORMATION).build())).build()).build();
+                .build());
+        Receipt receipt = Receipt.builder().eventId(BIZ_EVENT_ID).eventData(EventData.builder().amount(FORMATTED_GRAND_TOTAL).cart(List.of(CartItem.builder().subject(REMITTANCE_INFORMATION).build())).build()).build();
 
         AtomicReference<ReceiptPDFTemplate> atomicReference = new AtomicReference<>();
-        assertDoesNotThrow(() -> atomicReference.set(buildTemplateService.buildTemplate(event, GENERATED_BY_DEBTOR, receipt)));
+        assertDoesNotThrow(() -> atomicReference.set(buildTemplateService.buildTemplate(bizEventList, GENERATED_BY_DEBTOR, receipt)));
 
         ReceiptPDFTemplate receiptPdfTemplate = atomicReference.get();
 
@@ -569,7 +573,7 @@ class BuildTemplateServiceImplTest {
 
     @Test
     void mapTemplateAllFieldsSuccessCompleteTemplateAndPagoPaChannelOnTransactionOrigin() {
-        BizEvent event = BizEvent.builder()
+        List<BizEvent> bizEventList = Collections.singletonList(BizEvent.builder()
                 .id(BIZ_EVENT_ID)
                 .idPaymentManager(BIZ_EVENT_ID)
                 .debtorPosition(DebtorPosition.builder()
@@ -617,11 +621,11 @@ class BuildTemplateServiceImplTest {
                                 .build())
                         .build())
                 .eventStatus(BizEventStatusType.DONE)
-                .build();
-        Receipt receipt = Receipt.builder().eventData(EventData.builder().cart(List.of(CartItem.builder().subject(REMITTANCE_INFORMATION).build())).build()).build();
+                .build());
+        Receipt receipt = Receipt.builder().eventId(BIZ_EVENT_ID).eventData(EventData.builder().amount(FORMATTED_GRAND_TOTAL).cart(List.of(CartItem.builder().subject(REMITTANCE_INFORMATION).build())).build()).build();
 
         AtomicReference<ReceiptPDFTemplate> atomicReference = new AtomicReference<>();
-        assertDoesNotThrow(() -> atomicReference.set(buildTemplateService.buildTemplate(event, GENERATED_BY_DEBTOR, receipt)));
+        assertDoesNotThrow(() -> atomicReference.set(buildTemplateService.buildTemplate(bizEventList, GENERATED_BY_DEBTOR, receipt)));
 
         ReceiptPDFTemplate receiptPdfTemplate = atomicReference.get();
 
@@ -664,7 +668,7 @@ class BuildTemplateServiceImplTest {
 
     @Test
     void mapTemplateAllFieldsSuccessCompleteTemplateAndPagoPaChannelOnChannelId() {
-        BizEvent event = BizEvent.builder()
+        List<BizEvent> bizEventList = Collections.singletonList(BizEvent.builder()
                 .id(BIZ_EVENT_ID)
                 .idPaymentManager(BIZ_EVENT_ID)
                 .debtorPosition(DebtorPosition.builder()
@@ -712,11 +716,11 @@ class BuildTemplateServiceImplTest {
                                 .build())
                         .build())
                 .eventStatus(BizEventStatusType.DONE)
-                .build();
-        Receipt receipt = Receipt.builder().eventData(EventData.builder().cart(List.of(CartItem.builder().subject(REMITTANCE_INFORMATION).build())).build()).build();
+                .build());
+        Receipt receipt = Receipt.builder().eventId(BIZ_EVENT_ID).eventData(EventData.builder().cart(List.of(CartItem.builder().subject(REMITTANCE_INFORMATION).build())).amount(FORMATTED_GRAND_TOTAL).build()).build();
 
         AtomicReference<ReceiptPDFTemplate> atomicReference = new AtomicReference<>();
-        assertDoesNotThrow(() -> atomicReference.set(buildTemplateService.buildTemplate(event, GENERATED_BY_DEBTOR, receipt)));
+        assertDoesNotThrow(() -> atomicReference.set(buildTemplateService.buildTemplate(bizEventList, GENERATED_BY_DEBTOR, receipt)));
 
         ReceiptPDFTemplate receiptPdfTemplate = atomicReference.get();
 
@@ -759,7 +763,7 @@ class BuildTemplateServiceImplTest {
 
     @Test
     void mapTemplateAllFieldsSuccessPartialTemplateAndNotPagoPaChannel() {
-        BizEvent event = BizEvent.builder()
+        List<BizEvent> bizEventList = Collections.singletonList(BizEvent.builder()
                 .id(BIZ_EVENT_ID)
                 .debtorPosition(DebtorPosition.builder()
                         .noticeNumber(NOTICE_NUMBER)
@@ -787,11 +791,11 @@ class BuildTemplateServiceImplTest {
                         .IUR(IUR)
                         .build())
                 .eventStatus(BizEventStatusType.DONE)
-                .build();
-        Receipt receipt = Receipt.builder().eventData(EventData.builder().cart(List.of(CartItem.builder().subject(REMITTANCE_INFORMATION).build())).build()).build();
+                .build());
+        Receipt receipt = Receipt.builder().eventId(BIZ_EVENT_ID).eventData(EventData.builder().amount(FORMATTED_AMOUNT).cart(List.of(CartItem.builder().subject(REMITTANCE_INFORMATION).build())).build()).build();
 
         AtomicReference<ReceiptPDFTemplate> atomicReference = new AtomicReference<>();
-        assertDoesNotThrow(() -> atomicReference.set(buildTemplateService.buildTemplate(event, GENERATED_BY_DEBTOR, receipt)));
+        assertDoesNotThrow(() -> atomicReference.set(buildTemplateService.buildTemplate(bizEventList, GENERATED_BY_DEBTOR, receipt)));
 
         ReceiptPDFTemplate receiptPdfTemplate = atomicReference.get();
 
@@ -835,7 +839,7 @@ class BuildTemplateServiceImplTest {
 
     @Test
     void mapTemplateWithoutTransactionDetailsSuccess() {
-        BizEvent event = BizEvent.builder()
+        List<BizEvent> bizEventList = Collections.singletonList(BizEvent.builder()
                 .id(BIZ_EVENT_ID)
                 .debtorPosition(DebtorPosition.builder()
                         .iuv(IUV)
@@ -863,11 +867,11 @@ class BuildTemplateServiceImplTest {
                         .IUR(IUR)
                         .build())
                 .eventStatus(BizEventStatusType.DONE)
-                .build();
-        Receipt receipt = Receipt.builder().eventData(EventData.builder().cart(List.of(CartItem.builder().subject(REMITTANCE_INFORMATION).build())).build()).build();
+                .build());
+        Receipt receipt = Receipt.builder().eventId(BIZ_EVENT_ID).eventData(EventData.builder().amount(FORMATTED_AMOUNT).cart(List.of(CartItem.builder().subject(REMITTANCE_INFORMATION).build())).build()).build();
 
         AtomicReference<ReceiptPDFTemplate> atomicReference = new AtomicReference<>();
-        assertDoesNotThrow(() -> atomicReference.set(buildTemplateService.buildTemplate(event, GENERATED_BY_DEBTOR, receipt)));
+        assertDoesNotThrow(() -> atomicReference.set(buildTemplateService.buildTemplate(bizEventList, GENERATED_BY_DEBTOR, receipt)));
 
         ReceiptPDFTemplate receiptPdfTemplate = atomicReference.get();
 
@@ -910,7 +914,7 @@ class BuildTemplateServiceImplTest {
 
     @Test
     void mapTemplateWithoutTransactionDetailsAndPaymentTokenSuccess() {
-        BizEvent event = BizEvent.builder()
+        List<BizEvent> bizEventList = Collections.singletonList(BizEvent.builder()
                 .id(BIZ_EVENT_ID)
                 .debtorPosition(DebtorPosition.builder()
                         .iuv(IUV)
@@ -937,11 +941,11 @@ class BuildTemplateServiceImplTest {
                         .IUR(IUR)
                         .build())
                 .eventStatus(BizEventStatusType.DONE)
-                .build();
-        Receipt receipt = Receipt.builder().eventData(EventData.builder().cart(List.of(CartItem.builder().subject(REMITTANCE_INFORMATION).build())).build()).build();
+                .build());
+        Receipt receipt = Receipt.builder().eventId(BIZ_EVENT_ID).eventData(EventData.builder().amount(FORMATTED_AMOUNT).cart(List.of(CartItem.builder().subject(REMITTANCE_INFORMATION).build())).build()).build();
 
         AtomicReference<ReceiptPDFTemplate> atomicReference = new AtomicReference<>();
-        assertDoesNotThrow(() -> atomicReference.set(buildTemplateService.buildTemplate(event, GENERATED_BY_DEBTOR, receipt)));
+        assertDoesNotThrow(() -> atomicReference.set(buildTemplateService.buildTemplate(bizEventList, GENERATED_BY_DEBTOR, receipt)));
 
         ReceiptPDFTemplate receiptPdfTemplate = atomicReference.get();
 
@@ -983,7 +987,7 @@ class BuildTemplateServiceImplTest {
 
     @Test
     void mapTemplateAllFieldsSuccessDebtorFullNameEmpty() {
-        BizEvent event = BizEvent.builder()
+        List<BizEvent> bizEventList = Collections.singletonList(BizEvent.builder()
                 .id(BIZ_EVENT_ID)
                 .idPaymentManager(BIZ_EVENT_ID)
                 .debtorPosition(DebtorPosition.builder()
@@ -1031,11 +1035,11 @@ class BuildTemplateServiceImplTest {
                                 .build())
                         .build())
                 .eventStatus(BizEventStatusType.DONE)
-                .build();
-        Receipt receipt = Receipt.builder().eventData(EventData.builder().cart(List.of(CartItem.builder().subject(REMITTANCE_INFORMATION).build())).build()).build();
+                .build());
+        Receipt receipt = Receipt.builder().eventId(BIZ_EVENT_ID).eventData(EventData.builder().amount(FORMATTED_GRAND_TOTAL).cart(List.of(CartItem.builder().subject(REMITTANCE_INFORMATION).build())).build()).build();
 
         AtomicReference<ReceiptPDFTemplate> atomicReference = new AtomicReference<>();
-        assertDoesNotThrow(() -> atomicReference.set(buildTemplateService.buildTemplate(event, GENERATED_BY_DEBTOR, receipt)));
+        assertDoesNotThrow(() -> atomicReference.set(buildTemplateService.buildTemplate(bizEventList, GENERATED_BY_DEBTOR, receipt)));
 
         ReceiptPDFTemplate receiptPdfTemplate = atomicReference.get();
 
@@ -1078,7 +1082,7 @@ class BuildTemplateServiceImplTest {
 
     @Test
     void mapTemplateAllFieldsSuccessDebtorFullNameWithSpecialChar() {
-        BizEvent event = BizEvent.builder()
+        List<BizEvent> bizEventList = Collections.singletonList(BizEvent.builder()
                 .id(BIZ_EVENT_ID)
                 .idPaymentManager(BIZ_EVENT_ID)
                 .debtorPosition(DebtorPosition.builder()
@@ -1126,11 +1130,11 @@ class BuildTemplateServiceImplTest {
                                 .build())
                         .build())
                 .eventStatus(BizEventStatusType.DONE)
-                .build();
-        Receipt receipt = Receipt.builder().eventData(EventData.builder().cart(List.of(CartItem.builder().subject(REMITTANCE_INFORMATION).build())).build()).build();
+                .build());
+        Receipt receipt = Receipt.builder().eventId(BIZ_EVENT_ID).eventData(EventData.builder().amount(FORMATTED_GRAND_TOTAL).cart(List.of(CartItem.builder().subject(REMITTANCE_INFORMATION).build())).build()).build();
 
         AtomicReference<ReceiptPDFTemplate> atomicReference = new AtomicReference<>();
-        assertDoesNotThrow(() -> atomicReference.set(buildTemplateService.buildTemplate(event, GENERATED_BY_DEBTOR, receipt)));
+        assertDoesNotThrow(() -> atomicReference.set(buildTemplateService.buildTemplate(bizEventList, GENERATED_BY_DEBTOR, receipt)));
 
         ReceiptPDFTemplate receiptPdfTemplate = atomicReference.get();
 
@@ -1173,7 +1177,7 @@ class BuildTemplateServiceImplTest {
 
     @Test
     void mapTemplateAllFieldsSuccessDebtorFullNameEqualsFiscalCode() {
-        BizEvent event = BizEvent.builder()
+        List<BizEvent> bizEventList = Collections.singletonList(BizEvent.builder()
                 .id(BIZ_EVENT_ID)
                 .idPaymentManager(BIZ_EVENT_ID)
                 .debtorPosition(DebtorPosition.builder()
@@ -1221,11 +1225,11 @@ class BuildTemplateServiceImplTest {
                                 .build())
                         .build())
                 .eventStatus(BizEventStatusType.DONE)
-                .build();
-        Receipt receipt = Receipt.builder().eventData(EventData.builder().cart(List.of(CartItem.builder().subject(REMITTANCE_INFORMATION).build())).build()).build();
+                .build());
+        Receipt receipt = Receipt.builder().eventId(BIZ_EVENT_ID).eventData(EventData.builder().amount(FORMATTED_GRAND_TOTAL).cart(List.of(CartItem.builder().subject(REMITTANCE_INFORMATION).build())).build()).build();
 
         AtomicReference<ReceiptPDFTemplate> atomicReference = new AtomicReference<>();
-        assertDoesNotThrow(() -> atomicReference.set(buildTemplateService.buildTemplate(event, GENERATED_BY_DEBTOR, receipt)));
+        assertDoesNotThrow(() -> atomicReference.set(buildTemplateService.buildTemplate(bizEventList, GENERATED_BY_DEBTOR, receipt)));
 
         ReceiptPDFTemplate receiptPdfTemplate = atomicReference.get();
 
@@ -1268,7 +1272,7 @@ class BuildTemplateServiceImplTest {
 
     @Test
     void mapTemplateLeastAmountOfInfoSuccessPayer() {
-        BizEvent event = BizEvent.builder()
+        List<BizEvent> bizEventList = Collections.singletonList(BizEvent.builder()
                 .id(BIZ_EVENT_ID)
                 .paymentInfo(PaymentInfo.builder()
                         .IUR(IUR)
@@ -1294,16 +1298,14 @@ class BuildTemplateServiceImplTest {
                 .creditor(Creditor.builder()
                         .idPA(ID_PA)
                         .build())
-                .build();
-        EventData eventData = EventData.builder().cart(Collections.singletonList(
-                CartItem.builder().subject(REMITTANCE_INFORMATION).build())).build();
-        assertDoesNotThrow(() -> buildTemplateService.buildTemplate(event, GENERATED_BY_PAYER,
-                Receipt.builder().eventData(eventData).build()));
+                .build());
+        Receipt receipt = Receipt.builder().eventId(BIZ_EVENT_ID).eventData(EventData.builder().amount(FORMATTED_GRAND_TOTAL).cart(List.of(CartItem.builder().subject(REMITTANCE_INFORMATION).build())).build()).build();
+        assertDoesNotThrow(() -> buildTemplateService.buildTemplate(bizEventList, GENERATED_BY_PAYER, receipt));
     }
 
     @Test
     void mapTemplateLeastAmountOfInfoSuccessDebtor() {
-        BizEvent event = BizEvent.builder()
+        List<BizEvent> bizEventList = Collections.singletonList(BizEvent.builder()
                 .id(BIZ_EVENT_ID)
                 .paymentInfo(PaymentInfo.builder()
                         .IUR(IUR)
@@ -1325,16 +1327,14 @@ class BuildTemplateServiceImplTest {
                 .creditor(Creditor.builder()
                         .idPA(ID_PA)
                         .build())
-                .build();
-        EventData eventData = EventData.builder().cart(Collections.singletonList(
-                CartItem.builder().subject(REMITTANCE_INFORMATION).build())).build();
-        assertDoesNotThrow(() -> buildTemplateService.buildTemplate(
-                event, GENERATED_BY_DEBTOR, Receipt.builder().eventData(eventData).build()));
+                .build());
+        Receipt receipt = Receipt.builder().eventId(BIZ_EVENT_ID).eventData(EventData.builder().amount(FORMATTED_GRAND_TOTAL).cart(List.of(CartItem.builder().subject(REMITTANCE_INFORMATION).build())).build()).build();
+        assertDoesNotThrow(() -> buildTemplateService.buildTemplate(bizEventList, GENERATED_BY_DEBTOR, receipt));
     }
 
     @Test
     void mapTemplateSuccessRequestByDebtorTrueWithoutPayerAndUserFiscalCode() {
-        BizEvent event = BizEvent.builder()
+        List<BizEvent> bizEventList = Collections.singletonList(BizEvent.builder()
                 .id(BIZ_EVENT_ID)
                 .paymentInfo(PaymentInfo.builder()
                         .IUR(IUR)
@@ -1362,12 +1362,10 @@ class BuildTemplateServiceImplTest {
                         )
                         .build()
                 )
-                .build();
+                .build());
         AtomicReference<ReceiptPDFTemplate> atomicReference = new AtomicReference<>();
-        EventData eventData = EventData.builder().cart(Collections.singletonList(
-                CartItem.builder().subject(REMITTANCE_INFORMATION).build())).build();
-        assertDoesNotThrow(() -> atomicReference.set(buildTemplateService.buildTemplate(
-                event, GENERATED_BY_DEBTOR, Receipt.builder().eventData(eventData).build())));
+        Receipt receipt = Receipt.builder().eventId(BIZ_EVENT_ID).eventData(EventData.builder().amount(FORMATTED_GRAND_TOTAL).cart(List.of(CartItem.builder().subject(REMITTANCE_INFORMATION).build())).build()).build();
+        assertDoesNotThrow(() -> atomicReference.set(buildTemplateService.buildTemplate(bizEventList, GENERATED_BY_DEBTOR, receipt)));
 
         ReceiptPDFTemplate receiptPDFTemplate = atomicReference.get();
         assertTrue(receiptPDFTemplate.getTransaction().isRequestedByDebtor());
@@ -1375,7 +1373,7 @@ class BuildTemplateServiceImplTest {
 
     @Test
     void mapTemplateSuccessRequestByDebtorTrueWithPayerFiscalCodeDifferent() {
-        BizEvent event = BizEvent.builder()
+        List<BizEvent> bizEventList = Collections.singletonList(BizEvent.builder()
                 .id(BIZ_EVENT_ID)
                 .paymentInfo(PaymentInfo.builder()
                         .IUR(IUR)
@@ -1406,12 +1404,10 @@ class BuildTemplateServiceImplTest {
                         )
                         .build()
                 )
-                .build();
+                .build());
         AtomicReference<ReceiptPDFTemplate> atomicReference = new AtomicReference<>();
-        EventData eventData = EventData.builder().cart(Collections.singletonList(
-                CartItem.builder().subject(REMITTANCE_INFORMATION).build())).build();
-        assertDoesNotThrow(() -> atomicReference.set(buildTemplateService.buildTemplate(
-                event, GENERATED_BY_DEBTOR, Receipt.builder().eventData(eventData).build())));
+        Receipt receipt = Receipt.builder().eventId(BIZ_EVENT_ID).eventData(EventData.builder().amount(FORMATTED_GRAND_TOTAL).cart(List.of(CartItem.builder().subject(REMITTANCE_INFORMATION).build())).build()).build();
+        assertDoesNotThrow(() -> atomicReference.set(buildTemplateService.buildTemplate(bizEventList, GENERATED_BY_DEBTOR, receipt)));
 
         ReceiptPDFTemplate receiptPDFTemplate = atomicReference.get();
         assertTrue(receiptPDFTemplate.getTransaction().isRequestedByDebtor());
@@ -1419,7 +1415,7 @@ class BuildTemplateServiceImplTest {
 
     @Test
     void mapTemplateSuccessRequestByDebtorTrueWithUserFiscalCodeDifferent() {
-        BizEvent event = BizEvent.builder()
+        List<BizEvent> bizEventList = Collections.singletonList(BizEvent.builder()
                 .id(BIZ_EVENT_ID)
                 .paymentInfo(PaymentInfo.builder()
                         .IUR(IUR)
@@ -1448,12 +1444,10 @@ class BuildTemplateServiceImplTest {
                         .user(User.builder().fiscalCode(PAYER_VALID_CF).build())
                         .build()
                 )
-                .build();
+                .build());
         AtomicReference<ReceiptPDFTemplate> atomicReference = new AtomicReference<>();
-        EventData eventData = EventData.builder().cart(Collections.singletonList(
-                CartItem.builder().subject(REMITTANCE_INFORMATION).build())).build();
-        assertDoesNotThrow(() -> atomicReference.set(buildTemplateService.buildTemplate(event,
-                GENERATED_BY_DEBTOR, Receipt.builder().eventData(eventData).build())));
+        Receipt receipt = Receipt.builder().eventId(BIZ_EVENT_ID).eventData(EventData.builder().amount(FORMATTED_GRAND_TOTAL).cart(List.of(CartItem.builder().subject(REMITTANCE_INFORMATION).build())).build()).build();
+        assertDoesNotThrow(() -> atomicReference.set(buildTemplateService.buildTemplate(bizEventList, GENERATED_BY_DEBTOR, receipt)));
 
         ReceiptPDFTemplate receiptPDFTemplate = atomicReference.get();
         assertTrue(receiptPDFTemplate.getTransaction().isRequestedByDebtor());
@@ -1461,7 +1455,7 @@ class BuildTemplateServiceImplTest {
 
     @Test
     void mapTemplateSuccessRequestByDebtorFalseWithPayerAndUserFiscalCodeEqual() {
-        BizEvent event = BizEvent.builder()
+        List<BizEvent> bizEventList = Collections.singletonList(BizEvent.builder()
                 .id(BIZ_EVENT_ID)
                 .paymentInfo(PaymentInfo.builder()
                         .IUR(IUR)
@@ -1494,12 +1488,10 @@ class BuildTemplateServiceImplTest {
                         .user(User.builder().fiscalCode(DEBTOR_VALID_CF).build())
                         .build()
                 )
-                .build();
+                .build());
         AtomicReference<ReceiptPDFTemplate> atomicReference = new AtomicReference<>();
-        EventData eventData = EventData.builder().cart(Collections.singletonList(
-                CartItem.builder().subject(REMITTANCE_INFORMATION).build())).build();
-        assertDoesNotThrow(() -> atomicReference.set(buildTemplateService.buildTemplate(
-                event, GENERATED_BY_DEBTOR, Receipt.builder().eventData(eventData).build())));
+        Receipt receipt = Receipt.builder().eventId(BIZ_EVENT_ID).eventData(EventData.builder().amount(FORMATTED_GRAND_TOTAL).cart(List.of(CartItem.builder().subject(REMITTANCE_INFORMATION).build())).build()).build();
+        assertDoesNotThrow(() -> atomicReference.set(buildTemplateService.buildTemplate(bizEventList, GENERATED_BY_DEBTOR, receipt)));
 
         ReceiptPDFTemplate receiptPDFTemplate = atomicReference.get();
         assertFalse(receiptPDFTemplate.getTransaction().isRequestedByDebtor());
@@ -1507,7 +1499,7 @@ class BuildTemplateServiceImplTest {
 
     @Test
     void mapTemplateSuccessRequestByDebtorFalseWhenGeneratedByPayer() {
-        BizEvent event = BizEvent.builder()
+        List<BizEvent> bizEventList = Collections.singletonList(BizEvent.builder()
                 .id(BIZ_EVENT_ID)
                 .paymentInfo(PaymentInfo.builder()
                         .IUR(IUR)
@@ -1539,12 +1531,10 @@ class BuildTemplateServiceImplTest {
                         )
                         .build()
                 )
-                .build();
+                .build());
         AtomicReference<ReceiptPDFTemplate> atomicReference = new AtomicReference<>();
-        EventData eventData = EventData.builder().cart(Collections.singletonList(
-                CartItem.builder().subject(REMITTANCE_INFORMATION).build())).build();
-        assertDoesNotThrow(() -> atomicReference.set(buildTemplateService.buildTemplate(event, GENERATED_BY_PAYER,
-                Receipt.builder().eventData(eventData).build())));
+        Receipt receipt = Receipt.builder().eventId(BIZ_EVENT_ID).eventData(EventData.builder().amount(FORMATTED_GRAND_TOTAL).cart(List.of(CartItem.builder().subject(REMITTANCE_INFORMATION).build())).build()).build();
+        assertDoesNotThrow(() -> atomicReference.set(buildTemplateService.buildTemplate(bizEventList, GENERATED_BY_PAYER, receipt)));
 
         ReceiptPDFTemplate receiptPDFTemplate = atomicReference.get();
         assertFalse(receiptPDFTemplate.getTransaction().isRequestedByDebtor());
@@ -1552,7 +1542,7 @@ class BuildTemplateServiceImplTest {
 
     @Test
     void mapTemplateSuccessWithUserNameAndSurname() {
-        BizEvent event = BizEvent.builder()
+        List<BizEvent> bizEventList = Collections.singletonList(BizEvent.builder()
                 .id(BIZ_EVENT_ID)
                 .paymentInfo(PaymentInfo.builder()
                         .IUR(IUR)
@@ -1587,12 +1577,10 @@ class BuildTemplateServiceImplTest {
                                 .build())
                         .build()
                 )
-                .build();
+                .build());
         AtomicReference<ReceiptPDFTemplate> atomicReference = new AtomicReference<>();
-        EventData eventData = EventData.builder().cart(Collections.singletonList(
-                CartItem.builder().subject(REMITTANCE_INFORMATION).build())).build();
-        assertDoesNotThrow(() -> atomicReference.set(buildTemplateService.buildTemplate
-                (event, GENERATED_BY_PAYER, Receipt.builder().eventData(eventData).build())));
+        Receipt receipt = Receipt.builder().eventId(BIZ_EVENT_ID).eventData(EventData.builder().amount(FORMATTED_GRAND_TOTAL).cart(List.of(CartItem.builder().subject(REMITTANCE_INFORMATION).build())).build()).build();
+        assertDoesNotThrow(() -> atomicReference.set(buildTemplateService.buildTemplate(bizEventList, GENERATED_BY_PAYER, receipt)));
 
         ReceiptPDFTemplate receiptPDFTemplate = atomicReference.get();
         assertEquals(USER_FORMATTED_FULL_NAME, receiptPDFTemplate.getUser().getData().getFullName());
@@ -1600,7 +1588,7 @@ class BuildTemplateServiceImplTest {
 
     @Test
     void mapTemplateSuccessWithUserTaxCodeFromTransaction() {
-        BizEvent event = BizEvent.builder()
+        List<BizEvent> bizEventList = Collections.singletonList(BizEvent.builder()
                 .id(BIZ_EVENT_ID)
                 .paymentInfo(PaymentInfo.builder()
                         .IUR(IUR)
@@ -1636,12 +1624,10 @@ class BuildTemplateServiceImplTest {
                                 .build())
                         .build()
                 )
-                .build();
+                .build());
         AtomicReference<ReceiptPDFTemplate> atomicReference = new AtomicReference<>();
-        EventData eventData = EventData.builder().cart(Collections.singletonList(
-                CartItem.builder().subject(REMITTANCE_INFORMATION).build())).build();
-        assertDoesNotThrow(() -> atomicReference.set(buildTemplateService.buildTemplate(
-                event, GENERATED_BY_PAYER, Receipt.builder().eventData(eventData).build())));
+        Receipt receipt = Receipt.builder().eventId(BIZ_EVENT_ID).eventData(EventData.builder().cart(List.of(CartItem.builder().subject(REMITTANCE_INFORMATION).build())).amount(FORMATTED_GRAND_TOTAL).build()).build();
+        assertDoesNotThrow(() -> atomicReference.set(buildTemplateService.buildTemplate(bizEventList, GENERATED_BY_PAYER, receipt)));
 
         ReceiptPDFTemplate receiptPDFTemplate = atomicReference.get();
         assertEquals(USER_TAX_CODE, receiptPDFTemplate.getUser().getData().getTaxCode());
@@ -1649,56 +1635,56 @@ class BuildTemplateServiceImplTest {
 
     @Test
     void mapTemplateNoServiceCustomerIdError() {
-        BizEvent event = new BizEvent();
-        TemplateDataMappingException e = assertThrows(TemplateDataMappingException.class, () -> buildTemplateService.buildTemplate(event, GENERATED_BY_PAYER, Receipt.builder().build()));
+        List<BizEvent> bizEventList = Collections.singletonList(new BizEvent());
+        TemplateDataMappingException e = assertThrows(TemplateDataMappingException.class, () -> buildTemplateService.buildTemplate(bizEventList, GENERATED_BY_PAYER, Receipt.builder().build()));
 
         assertEquals(ReasonErrorCode.ERROR_TEMPLATE_PDF.getCode(), e.getStatusCode());
-        assertEquals(String.format(TemplateDataField.ERROR_MAPPING_MESSAGE, TemplateDataField.SERVICE_CUSTOMER_ID), e.getMessage());
+        assertEquals(String.format(TemplateDataField.ERROR_MAPPING_MESSAGE, RECEIPT, TemplateDataField.SERVICE_CUSTOMER_ID, RECEIPT, null), e.getMessage());
     }
 
     @Test
     void mapTemplateNoTransactionTimestampError() {
-        BizEvent event = BizEvent.builder().id(BIZ_EVENT_ID).paymentInfo(PaymentInfo.builder().IUR(IUR).build()).build();
-        TemplateDataMappingException e = assertThrows(TemplateDataMappingException.class, () -> buildTemplateService.buildTemplate(event, GENERATED_BY_PAYER, Receipt.builder().build()));
+        List<BizEvent> bizEventList = Collections.singletonList(BizEvent.builder().id(BIZ_EVENT_ID).paymentInfo(PaymentInfo.builder().IUR(IUR).build()).build());
+        TemplateDataMappingException e = assertThrows(TemplateDataMappingException.class, () -> buildTemplateService.buildTemplate(bizEventList, GENERATED_BY_PAYER, Receipt.builder().eventId(BIZ_EVENT_ID).build()));
 
         assertEquals(ReasonErrorCode.ERROR_TEMPLATE_PDF.getCode(), e.getStatusCode());
-        assertEquals(String.format(TemplateDataField.ERROR_MAPPING_MESSAGE, TemplateDataField.TRANSACTION_TIMESTAMP), e.getMessage());
+        assertEquals(String.format(TemplateDataField.ERROR_MAPPING_MESSAGE, BIZ_EVENT, TemplateDataField.TRANSACTION_TIMESTAMP, BIZ_EVENT, BIZ_EVENT_ID), e.getMessage());
     }
 
     @Test
     void mapTemplateNoTransactionAmountError() {
-        BizEvent event = BizEvent.builder()
+        List<BizEvent> bizEventList = Collections.singletonList(BizEvent.builder()
                 .id(BIZ_EVENT_ID)
                 .paymentInfo(PaymentInfo.builder()
                         .IUR(IUR)
                         .paymentDateTime(DATE_TIME_TIMESTAMP_MILLISECONDS_DST_WINTER)
                         .build())
-                .build();
-        TemplateDataMappingException e = assertThrows(TemplateDataMappingException.class, () -> buildTemplateService.buildTemplate(event, GENERATED_BY_PAYER, Receipt.builder().build()));
+                .build());
+        TemplateDataMappingException e = assertThrows(TemplateDataMappingException.class, () -> buildTemplateService.buildTemplate(bizEventList, GENERATED_BY_PAYER, Receipt.builder().id(RECEIPT_ID).eventId(BIZ_EVENT_ID).build()));
 
         assertEquals(ReasonErrorCode.ERROR_TEMPLATE_PDF.getCode(), e.getStatusCode());
-        assertEquals(String.format(TemplateDataField.ERROR_MAPPING_MESSAGE, TemplateDataField.TRANSACTION_AMOUNT), e.getMessage());
+        assertEquals(String.format(TemplateDataField.ERROR_MAPPING_MESSAGE, RECEIPT,TemplateDataField.TRANSACTION_AMOUNT, RECEIPT,RECEIPT_ID), e.getMessage());
     }
 
     @Test
     void mapTemplateNoPspError() {
-        BizEvent event = BizEvent.builder()
+        List<BizEvent> bizEventList = Collections.singletonList(BizEvent.builder()
                 .id(BIZ_EVENT_ID)
                 .paymentInfo(PaymentInfo.builder()
                         .IUR(IUR)
                         .paymentDateTime(DATE_TIME_TIMESTAMP_MILLISECONDS_DST_WINTER)
                         .amount(AMOUNT_WITHOUT_CENTS)
                         .build())
-                .build();
-        TemplateDataMappingException e = assertThrows(TemplateDataMappingException.class, () -> buildTemplateService.buildTemplate(event, GENERATED_BY_PAYER, Receipt.builder().build()));
+                .build());
+        TemplateDataMappingException e = assertThrows(TemplateDataMappingException.class, () -> buildTemplateService.buildTemplate(bizEventList, GENERATED_BY_PAYER, Receipt.builder().eventId(BIZ_EVENT_ID).eventData(EventData.builder().amount(FORMATTED_GRAND_TOTAL).build()).build()));
 
         assertEquals(ReasonErrorCode.ERROR_TEMPLATE_PDF.getCode(), e.getStatusCode());
-        assertEquals(String.format(TemplateDataField.ERROR_MAPPING_MESSAGE, TemplateDataField.TRANSACTION_PSP), e.getMessage());
+        assertEquals(String.format(TemplateDataField.ERROR_MAPPING_MESSAGE, BIZ_EVENT,TemplateDataField.TRANSACTION_PSP, BIZ_EVENT,BIZ_EVENT_ID), e.getMessage());
     }
 
     @Test
     void mapTemplateNoPspNameError() {
-        BizEvent event = BizEvent.builder()
+        List<BizEvent> bizEventList = Collections.singletonList(BizEvent.builder()
                 .id(BIZ_EVENT_ID)
                 .paymentInfo(PaymentInfo.builder()
                         .IUR(IUR)
@@ -1708,16 +1694,16 @@ class BuildTemplateServiceImplTest {
                 .psp(Psp.builder()
                         .idPsp("noName")
                         .build())
-                .build();
-        TemplateDataMappingException e = assertThrows(TemplateDataMappingException.class, () -> buildTemplateService.buildTemplate(event, GENERATED_BY_PAYER, Receipt.builder().build()));
+                .build());
+        TemplateDataMappingException e = assertThrows(TemplateDataMappingException.class, () -> buildTemplateService.buildTemplate(bizEventList, GENERATED_BY_PAYER, Receipt.builder().eventId(BIZ_EVENT_ID).eventData(EventData.builder().amount(FORMATTED_GRAND_TOTAL).build()).build()));
 
         assertEquals(ReasonErrorCode.ERROR_TEMPLATE_PDF.getCode(), e.getStatusCode());
-        assertEquals(String.format(TemplateDataField.ERROR_MAPPING_MESSAGE, TemplateDataField.TRANSACTION_PSP_NAME), e.getMessage());
+        assertEquals(String.format(TemplateDataField.ERROR_MAPPING_MESSAGE, BIZ_EVENT,TemplateDataField.TRANSACTION_PSP_NAME, BIZ_EVENT, BIZ_EVENT_ID), e.getMessage());
     }
 
     @Test
     void mapTemplateNoPspCompanyNameError() {
-        BizEvent event = BizEvent.builder()
+        List<BizEvent> bizEventList = Collections.singletonList(BizEvent.builder()
                 .id(BIZ_EVENT_ID)
                 .paymentInfo(PaymentInfo.builder()
                         .IUR(IUR)
@@ -1728,16 +1714,16 @@ class BuildTemplateServiceImplTest {
                         .idPsp("noCompanyName")
                         .psp(PSP_NAME)
                         .build())
-                .build();
-        TemplateDataMappingException e = assertThrows(TemplateDataMappingException.class, () -> buildTemplateService.buildTemplate(event, GENERATED_BY_PAYER, Receipt.builder().build()));
+                .build());
+        TemplateDataMappingException e = assertThrows(TemplateDataMappingException.class, () -> buildTemplateService.buildTemplate(bizEventList, GENERATED_BY_PAYER, Receipt.builder().id(RECEIPT_ID).eventId(BIZ_EVENT_ID).eventData(EventData.builder().amount(FORMATTED_GRAND_TOTAL).build()).build()));
 
         assertEquals(ReasonErrorCode.ERROR_TEMPLATE_PDF.getCode(), e.getStatusCode());
-        assertEquals(String.format(TemplateDataField.ERROR_MAPPING_MESSAGE, TemplateDataField.TRANSACTION_PSP_COMPANY_NAME), e.getMessage());
+        assertEquals(String.format(TemplateDataField.ERROR_MAPPING_MESSAGE, BIZ_EVENT,TemplateDataField.TRANSACTION_PSP_COMPANY_NAME, BIZ_EVENT,BIZ_EVENT_ID), e.getMessage());
     }
 
     @Test
     void mapTemplateNoPspAddressError() {
-        BizEvent event = BizEvent.builder()
+        List<BizEvent> bizEventList = Collections.singletonList(BizEvent.builder()
                 .id(BIZ_EVENT_ID)
                 .paymentInfo(PaymentInfo.builder()
                         .IUR(IUR)
@@ -1748,16 +1734,18 @@ class BuildTemplateServiceImplTest {
                         .idPsp("noAddress")
                         .psp(PSP_NAME)
                         .build())
-                .build();
-        TemplateDataMappingException e = assertThrows(TemplateDataMappingException.class, () -> buildTemplateService.buildTemplate(event, GENERATED_BY_PAYER, Receipt.builder().build()));
+                .build());
+        TemplateDataMappingException e = assertThrows(TemplateDataMappingException.class, () -> buildTemplateService.buildTemplate(bizEventList, GENERATED_BY_PAYER, Receipt.builder().id(RECEIPT_ID).eventId(BIZ_EVENT_ID).eventData(EventData.builder().amount(FORMATTED_GRAND_TOTAL).build()).build()));
 
         assertEquals(ReasonErrorCode.ERROR_TEMPLATE_PDF.getCode(), e.getStatusCode());
-        assertEquals(String.format(TemplateDataField.ERROR_MAPPING_MESSAGE, TemplateDataField.TRANSACTION_PSP_ADDRESS), e.getMessage());
+        assertEquals(String.format(TemplateDataField.ERROR_MAPPING_MESSAGE,
+
+                BIZ_EVENT,TemplateDataField.TRANSACTION_PSP_ADDRESS, BIZ_EVENT, BIZ_EVENT_ID), e.getMessage());
     }
 
     @Test
     void mapTemplateNoPspCityError() {
-        BizEvent event = BizEvent.builder()
+        List<BizEvent> bizEventList = Collections.singletonList(BizEvent.builder()
                 .id(BIZ_EVENT_ID)
                 .paymentInfo(PaymentInfo.builder()
                         .IUR(IUR)
@@ -1768,16 +1756,16 @@ class BuildTemplateServiceImplTest {
                         .idPsp("noCity")
                         .psp(PSP_NAME)
                         .build())
-                .build();
-        TemplateDataMappingException e = assertThrows(TemplateDataMappingException.class, () -> buildTemplateService.buildTemplate(event, GENERATED_BY_PAYER, Receipt.builder().build()));
+                .build());
+        TemplateDataMappingException e = assertThrows(TemplateDataMappingException.class, () -> buildTemplateService.buildTemplate(bizEventList, GENERATED_BY_PAYER, Receipt.builder().id(RECEIPT_ID).eventId(BIZ_EVENT_ID).eventData(EventData.builder().amount(FORMATTED_GRAND_TOTAL).build()).build()));
 
         assertEquals(ReasonErrorCode.ERROR_TEMPLATE_PDF.getCode(), e.getStatusCode());
-        assertEquals(String.format(TemplateDataField.ERROR_MAPPING_MESSAGE, TemplateDataField.TRANSACTION_PSP_CITY), e.getMessage());
+        assertEquals(String.format(TemplateDataField.ERROR_MAPPING_MESSAGE, BIZ_EVENT,TemplateDataField.TRANSACTION_PSP_CITY, BIZ_EVENT, BIZ_EVENT_ID ), e.getMessage());
     }
 
     @Test
     void mapTemplateNoPspProvinceError() {
-        BizEvent event = BizEvent.builder()
+        List<BizEvent> bizEventList = Collections.singletonList(BizEvent.builder()
                 .id(BIZ_EVENT_ID)
                 .paymentInfo(PaymentInfo.builder()
                         .IUR(IUR)
@@ -1788,16 +1776,16 @@ class BuildTemplateServiceImplTest {
                         .idPsp("noProvince")
                         .psp(PSP_NAME)
                         .build())
-                .build();
-        TemplateDataMappingException e = assertThrows(TemplateDataMappingException.class, () -> buildTemplateService.buildTemplate(event, GENERATED_BY_PAYER, Receipt.builder().build()));
+                .build());
+        TemplateDataMappingException e = assertThrows(TemplateDataMappingException.class, () -> buildTemplateService.buildTemplate(bizEventList, GENERATED_BY_PAYER, Receipt.builder().eventId(BIZ_EVENT_ID).eventData(EventData.builder().amount(FORMATTED_GRAND_TOTAL).build()).build()));
 
         assertEquals(ReasonErrorCode.ERROR_TEMPLATE_PDF.getCode(), e.getStatusCode());
-        assertEquals(String.format(TemplateDataField.ERROR_MAPPING_MESSAGE, TemplateDataField.TRANSACTION_PSP_PROVINCE), e.getMessage());
+        assertEquals(String.format(TemplateDataField.ERROR_MAPPING_MESSAGE, BIZ_EVENT,TemplateDataField.TRANSACTION_PSP_PROVINCE, BIZ_EVENT,BIZ_EVENT_ID), e.getMessage());
     }
 
     @Test
     void mapTemplateNoPspBuildingNumberError() {
-        BizEvent event = BizEvent.builder()
+        List<BizEvent> bizEventList = Collections.singletonList(BizEvent.builder()
                 .id(BIZ_EVENT_ID)
                 .paymentInfo(PaymentInfo.builder()
                         .IUR(IUR)
@@ -1808,16 +1796,16 @@ class BuildTemplateServiceImplTest {
                         .idPsp("noBuildingNumber")
                         .psp(PSP_NAME)
                         .build())
-                .build();
-        TemplateDataMappingException e = assertThrows(TemplateDataMappingException.class, () -> buildTemplateService.buildTemplate(event, GENERATED_BY_PAYER, Receipt.builder().build()));
+                .build());
+        TemplateDataMappingException e = assertThrows(TemplateDataMappingException.class, () -> buildTemplateService.buildTemplate(bizEventList, GENERATED_BY_PAYER, Receipt.builder().id(RECEIPT_ID).eventId(BIZ_EVENT_ID).eventData(EventData.builder().amount(FORMATTED_GRAND_TOTAL).build()).build()));
 
         assertEquals(ReasonErrorCode.ERROR_TEMPLATE_PDF.getCode(), e.getStatusCode());
-        assertEquals(String.format(TemplateDataField.ERROR_MAPPING_MESSAGE, TemplateDataField.TRANSACTION_PSP_BUILDING_NUMBER), e.getMessage());
+        assertEquals(String.format(TemplateDataField.ERROR_MAPPING_MESSAGE, BIZ_EVENT,TemplateDataField.TRANSACTION_PSP_BUILDING_NUMBER, BIZ_EVENT, BIZ_EVENT_ID), e.getMessage());
     }
 
     @Test
     void mapTemplateNoPspPostalCodeError() {
-        BizEvent event = BizEvent.builder()
+        List<BizEvent> bizEventList = Collections.singletonList(BizEvent.builder()
                 .id(BIZ_EVENT_ID)
                 .paymentInfo(PaymentInfo.builder()
                         .IUR(IUR)
@@ -1828,16 +1816,16 @@ class BuildTemplateServiceImplTest {
                         .idPsp("noPostalCode")
                         .psp(PSP_NAME)
                         .build())
-                .build();
-        TemplateDataMappingException e = assertThrows(TemplateDataMappingException.class, () -> buildTemplateService.buildTemplate(event, GENERATED_BY_PAYER, Receipt.builder().build()));
+                .build());
+        TemplateDataMappingException e = assertThrows(TemplateDataMappingException.class, () -> buildTemplateService.buildTemplate(bizEventList, GENERATED_BY_PAYER, Receipt.builder().eventId(BIZ_EVENT_ID).eventData(EventData.builder().amount(FORMATTED_GRAND_TOTAL).build()).build()));
 
         assertEquals(ReasonErrorCode.ERROR_TEMPLATE_PDF.getCode(), e.getStatusCode());
-        assertEquals(String.format(TemplateDataField.ERROR_MAPPING_MESSAGE, TemplateDataField.TRANSACTION_PSP_POSTAL_CODE), e.getMessage());
+        assertEquals(String.format(TemplateDataField.ERROR_MAPPING_MESSAGE, BIZ_EVENT,TemplateDataField.TRANSACTION_PSP_POSTAL_CODE, BIZ_EVENT,BIZ_EVENT_ID), e.getMessage());
     }
 
     @Test
     void mapTemplateNoPspLogoError() {
-        BizEvent event = BizEvent.builder()
+        List<BizEvent> bizEventList = Collections.singletonList(BizEvent.builder()
                 .id(BIZ_EVENT_ID)
                 .paymentInfo(PaymentInfo.builder()
                         .IUR(IUR)
@@ -1853,16 +1841,16 @@ class BuildTemplateServiceImplTest {
                                 .fee(FEE_LONG)
                                 .build())
                         .build())
-                .build();
-        TemplateDataMappingException e = assertThrows(TemplateDataMappingException.class, () -> buildTemplateService.buildTemplate(event, GENERATED_BY_PAYER, Receipt.builder().build()));
+                .build());
+        TemplateDataMappingException e = assertThrows(TemplateDataMappingException.class, () -> buildTemplateService.buildTemplate(bizEventList, GENERATED_BY_PAYER, Receipt.builder().id(RECEIPT_ID).eventId(BIZ_EVENT_ID).eventData(EventData.builder().amount(FORMATTED_GRAND_TOTAL).build()).build()));
 
         assertEquals(ReasonErrorCode.ERROR_TEMPLATE_PDF.getCode(), e.getStatusCode());
-        assertEquals(String.format(TemplateDataField.ERROR_MAPPING_MESSAGE, TemplateDataField.TRANSACTION_PSP_LOGO), e.getMessage());
+        assertEquals(String.format(TemplateDataField.ERROR_MAPPING_MESSAGE, BIZ_EVENT, TemplateDataField.TRANSACTION_PSP_LOGO, BIZ_EVENT,BIZ_EVENT_ID), e.getMessage());
     }
 
     @Test
     void mapTemplateNoRrnError() {
-        BizEvent event = BizEvent.builder()
+        List<BizEvent> bizEventList = Collections.singletonList(BizEvent.builder()
                 .id(BIZ_EVENT_ID)
                 .paymentInfo(PaymentInfo.builder()
                         .paymentDateTime(DATE_TIME_TIMESTAMP_MILLISECONDS_DST_WINTER)
@@ -1877,16 +1865,16 @@ class BuildTemplateServiceImplTest {
                                 .idTransaction(ID_TRANSACTION)
                                 .build())
                         .build())
-                .build();
-        TemplateDataMappingException e = assertThrows(TemplateDataMappingException.class, () -> buildTemplateService.buildTemplate(event, GENERATED_BY_PAYER, Receipt.builder().build()));
+                .build());
+        TemplateDataMappingException e = assertThrows(TemplateDataMappingException.class, () -> buildTemplateService.buildTemplate(bizEventList, GENERATED_BY_PAYER, Receipt.builder().eventId(BIZ_EVENT_ID).eventData(EventData.builder().amount(FORMATTED_GRAND_TOTAL).build()).build()));
 
         assertEquals(ReasonErrorCode.ERROR_TEMPLATE_PDF.getCode(), e.getStatusCode());
-        assertEquals(String.format(TemplateDataField.ERROR_MAPPING_MESSAGE, TemplateDataField.TRANSACTION_RRN), e.getMessage());
+        assertEquals(String.format(TemplateDataField.ERROR_MAPPING_MESSAGE, BIZ_EVENT,TemplateDataField.TRANSACTION_RRN, BIZ_EVENT,BIZ_EVENT_ID), e.getMessage());
     }
 
     @Test
     void mapTemplateNoUserDataFullNameError() {
-        BizEvent event = BizEvent.builder()
+        List<BizEvent> bizEventList = Collections.singletonList(BizEvent.builder()
                 .id(BIZ_EVENT_ID)
                 .paymentInfo(PaymentInfo.builder()
                         .IUR(IUR)
@@ -1897,16 +1885,16 @@ class BuildTemplateServiceImplTest {
                         .idPsp(ID_PSP)
                         .psp(PSP_NAME)
                         .build())
-                .build();
-        TemplateDataMappingException e = assertThrows(TemplateDataMappingException.class, () -> buildTemplateService.buildTemplate(event, GENERATED_BY_PAYER, Receipt.builder().build()));
+                .build());
+        TemplateDataMappingException e = assertThrows(TemplateDataMappingException.class, () -> buildTemplateService.buildTemplate(bizEventList, GENERATED_BY_PAYER, Receipt.builder().eventId(BIZ_EVENT_ID).eventData(EventData.builder().amount(FORMATTED_GRAND_TOTAL).build()).build()));
 
         assertEquals(ReasonErrorCode.ERROR_TEMPLATE_PDF.getCode(), e.getStatusCode());
-        assertEquals(String.format(TemplateDataField.ERROR_MAPPING_MESSAGE, TemplateDataField.USER_DATA_FULL_NAME), e.getMessage());
+        assertEquals(String.format(TemplateDataField.ERROR_MAPPING_MESSAGE, BIZ_EVENT,TemplateDataField.USER_DATA_FULL_NAME, BIZ_EVENT,BIZ_EVENT_ID), e.getMessage());
     }
 
     @Test
     void mapTemplateNoUserDataTaxCodeError() {
-        BizEvent event = BizEvent.builder()
+        List<BizEvent> bizEventList = Collections.singletonList(BizEvent.builder()
                 .id(BIZ_EVENT_ID)
                 .paymentInfo(PaymentInfo.builder()
                         .IUR(IUR)
@@ -1920,16 +1908,16 @@ class BuildTemplateServiceImplTest {
                 .payer(Payer.builder()
                         .fullName(PAYER_FULL_NAME)
                         .build())
-                .build();
-        TemplateDataMappingException e = assertThrows(TemplateDataMappingException.class, () -> buildTemplateService.buildTemplate(event, GENERATED_BY_PAYER, Receipt.builder().build()));
+                .build());
+        TemplateDataMappingException e = assertThrows(TemplateDataMappingException.class, () -> buildTemplateService.buildTemplate(bizEventList, GENERATED_BY_PAYER, Receipt.builder().eventId(BIZ_EVENT_ID).eventData(EventData.builder().amount(FORMATTED_GRAND_TOTAL).build()).build()));
 
         assertEquals(ReasonErrorCode.ERROR_TEMPLATE_PDF.getCode(), e.getStatusCode());
-        assertEquals(String.format(TemplateDataField.ERROR_MAPPING_MESSAGE, TemplateDataField.USER_DATA_TAX_CODE), e.getMessage());
+        assertEquals(String.format(TemplateDataField.ERROR_MAPPING_MESSAGE, BIZ_EVENT,TemplateDataField.USER_DATA_TAX_CODE, BIZ_EVENT,BIZ_EVENT_ID), e.getMessage());
     }
 
     @Test
     void mapTemplateNoCartItemRefNumberTypeError() {
-        BizEvent event = BizEvent.builder()
+        List<BizEvent> bizEventList = Collections.singletonList(BizEvent.builder()
                 .id(BIZ_EVENT_ID)
                 .paymentInfo(PaymentInfo.builder()
                         .IUR(IUR)
@@ -1944,16 +1932,16 @@ class BuildTemplateServiceImplTest {
                         .fullName(PAYER_FULL_NAME)
                         .entityUniqueIdentifierValue(PAYER_VALID_CF)
                         .build())
-                .build();
-        TemplateDataMappingException e = assertThrows(TemplateDataMappingException.class, () -> buildTemplateService.buildTemplate(event, GENERATED_BY_PAYER, Receipt.builder().build()));
+                .build());
+        TemplateDataMappingException e = assertThrows(TemplateDataMappingException.class, () -> buildTemplateService.buildTemplate(bizEventList, GENERATED_BY_PAYER, Receipt.builder().eventId(BIZ_EVENT_ID).eventData(EventData.builder().amount(FORMATTED_GRAND_TOTAL).build()).build()));
 
         assertEquals(ReasonErrorCode.ERROR_TEMPLATE_PDF.getCode(), e.getStatusCode());
-        assertEquals(String.format(TemplateDataField.ERROR_MAPPING_MESSAGE, TemplateDataField.CART_ITEM_REF_NUMBER_TYPE), e.getMessage());
+        assertEquals(String.format(TemplateDataField.ERROR_MAPPING_MESSAGE, BIZ_EVENT,TemplateDataField.CART_ITEM_REF_NUMBER_TYPE, BIZ_EVENT, BIZ_EVENT_ID), e.getMessage());
     }
 
     @Test
     void mapTemplateNoCartItemRefNumberValueIUVError() {
-        BizEvent event = BizEvent.builder()
+        List<BizEvent> bizEventList = Collections.singletonList(BizEvent.builder()
                 .id(BIZ_EVENT_ID)
                 .paymentInfo(PaymentInfo.builder()
                         .IUR(IUR)
@@ -1971,16 +1959,16 @@ class BuildTemplateServiceImplTest {
                 .debtorPosition(DebtorPosition.builder()
                         .modelType(MODEL_TYPE_IUV_CODE)
                         .build())
-                .build();
-        TemplateDataMappingException e = assertThrows(TemplateDataMappingException.class, () -> buildTemplateService.buildTemplate(event, GENERATED_BY_PAYER, Receipt.builder().build()));
+                .build());
+        TemplateDataMappingException e = assertThrows(TemplateDataMappingException.class, () -> buildTemplateService.buildTemplate(bizEventList, GENERATED_BY_PAYER, Receipt.builder().id(RECEIPT_ID).eventId(BIZ_EVENT_ID).eventData(EventData.builder().amount(FORMATTED_GRAND_TOTAL).build()).build()));
 
         assertEquals(ReasonErrorCode.ERROR_TEMPLATE_PDF.getCode(), e.getStatusCode());
-        assertEquals(String.format(TemplateDataField.ERROR_MAPPING_MESSAGE, TemplateDataField.CART_ITEM_REF_NUMBER_VALUE), e.getMessage());
+        assertEquals(String.format(TemplateDataField.ERROR_MAPPING_MESSAGE, BIZ_EVENT,TemplateDataField.CART_ITEM_REF_NUMBER_VALUE, BIZ_EVENT, BIZ_EVENT_ID), e.getMessage());
     }
 
     @Test
     void mapTemplateWrongModelTypeError() {
-        BizEvent event = BizEvent.builder()
+        List<BizEvent> bizEventList = Collections.singletonList(BizEvent.builder()
                 .id(BIZ_EVENT_ID)
                 .paymentInfo(PaymentInfo.builder()
                         .IUR(IUR)
@@ -1999,16 +1987,16 @@ class BuildTemplateServiceImplTest {
                         .iuv(IUV)
                         .modelType(MODEL_TYPE_NOTICE_CODE)
                         .build())
-                .build();
-        TemplateDataMappingException e = assertThrows(TemplateDataMappingException.class, () -> buildTemplateService.buildTemplate(event, GENERATED_BY_PAYER, Receipt.builder().build()));
+                .build());
+        TemplateDataMappingException e = assertThrows(TemplateDataMappingException.class, () -> buildTemplateService.buildTemplate(bizEventList, GENERATED_BY_PAYER, Receipt.builder().eventId(BIZ_EVENT_ID).eventData(EventData.builder().amount(FORMATTED_GRAND_TOTAL).build()).build()));
 
         assertEquals(ReasonErrorCode.ERROR_TEMPLATE_PDF.getCode(), e.getStatusCode());
-        assertEquals(String.format(TemplateDataField.ERROR_MAPPING_MESSAGE, TemplateDataField.CART_ITEM_REF_NUMBER_VALUE), e.getMessage());
+        assertEquals(String.format(TemplateDataField.ERROR_MAPPING_MESSAGE, BIZ_EVENT,TemplateDataField.CART_ITEM_REF_NUMBER_VALUE, BIZ_EVENT,BIZ_EVENT_ID), e.getMessage());
     }
 
     @Test
     void mapTemplateNoCartItemDebtorTaxCodeValueError() {
-        BizEvent event = BizEvent.builder()
+        List<BizEvent> bizEventList = Collections.singletonList(BizEvent.builder()
                 .id(BIZ_EVENT_ID)
                 .paymentInfo(PaymentInfo.builder()
                         .IUR(IUR)
@@ -2027,17 +2015,17 @@ class BuildTemplateServiceImplTest {
                         .modelType(MODEL_TYPE_IUV_CODE)
                         .iuv(IUV)
                         .build())
-                .build();
-        TemplateDataMappingException e = assertThrows(TemplateDataMappingException.class, () -> buildTemplateService.buildTemplate(event, GENERATED_BY_PAYER,
-                Receipt.builder().eventData(EventData.builder().debtorFiscalCode("DEBTOR_FC").build()).build()));
+                .build());
+        TemplateDataMappingException e = assertThrows(TemplateDataMappingException.class, () -> buildTemplateService.buildTemplate(bizEventList, GENERATED_BY_PAYER,
+                Receipt.builder().id(RECEIPT_ID).eventId(BIZ_EVENT_ID).eventData(EventData.builder().amount(FORMATTED_GRAND_TOTAL).debtorFiscalCode(DEBTOR_VALID_CF).build()).build()));
 
         assertEquals(ReasonErrorCode.ERROR_TEMPLATE_PDF.getCode(), e.getStatusCode());
-        assertEquals(String.format(TemplateDataField.ERROR_MAPPING_MESSAGE, TemplateDataField.CART_ITEM_DEBTOR_TAX_CODE), e.getMessage());
+        assertEquals(String.format(TemplateDataField.ERROR_MAPPING_MESSAGE, BIZ_EVENT,TemplateDataField.CART_ITEM_DEBTOR_TAX_CODE, BIZ_EVENT, BIZ_EVENT_ID), e.getMessage());
     }
 
     @Test
     void mapTemplateNoCartItemPayeeTaxCodeValueError() {
-        BizEvent event = BizEvent.builder()
+        List<BizEvent> bizEventList = Collections.singletonList(BizEvent.builder()
                 .id(BIZ_EVENT_ID)
                 .paymentInfo(PaymentInfo.builder()
                         .IUR(IUR)
@@ -2059,17 +2047,17 @@ class BuildTemplateServiceImplTest {
                 .debtor(Debtor.builder()
                         .entityUniqueIdentifierValue(DEBTOR_VALID_CF)
                         .build())
-                .build();
-        TemplateDataMappingException e = assertThrows(TemplateDataMappingException.class, () -> buildTemplateService.buildTemplate(event, GENERATED_BY_PAYER,
-                Receipt.builder().eventData(EventData.builder().debtorFiscalCode("DEBTOR_FC").build()).build()));
+                .build());
+        TemplateDataMappingException e = assertThrows(TemplateDataMappingException.class, () -> buildTemplateService.buildTemplate(bizEventList, GENERATED_BY_PAYER, Receipt.builder().id(RECEIPT_ID).eventId(BIZ_EVENT_ID).eventData(
+                EventData.builder().amount(FORMATTED_GRAND_TOTAL).debtorFiscalCode(DEBTOR_VALID_CF).build()).build()));
 
         assertEquals(ReasonErrorCode.ERROR_TEMPLATE_PDF.getCode(), e.getStatusCode());
-        assertEquals(String.format(TemplateDataField.ERROR_MAPPING_MESSAGE, TemplateDataField.CART_ITEM_PAYEE_TAX_CODE), e.getMessage());
+        assertEquals(String.format(TemplateDataField.ERROR_MAPPING_MESSAGE, BIZ_EVENT,TemplateDataField.CART_ITEM_PAYEE_TAX_CODE, BIZ_EVENT,BIZ_EVENT_ID), e.getMessage());
     }
 
     @Test
     void mapTemplateNoCartItemAmountValueError() {
-        BizEvent event = BizEvent.builder()
+        List<BizEvent> bizEventList = Collections.singletonList(BizEvent.builder()
                 .id(BIZ_EVENT_ID)
                 .paymentInfo(PaymentInfo.builder()
                         .IUR(IUR)
@@ -2101,13 +2089,172 @@ class BuildTemplateServiceImplTest {
                         )
                         .build()
                 )
-                .build();
-        EventData eventData = EventData.builder().cart(Collections.singletonList(
-                CartItem.builder().subject(REMITTANCE_INFORMATION).build())).build();
-        TemplateDataMappingException e = assertThrows(TemplateDataMappingException.class, () ->
-                buildTemplateService.buildTemplate(event, GENERATED_BY_PAYER, Receipt.builder().eventData(eventData).build()));
+                .build());
+        Receipt receipt = Receipt.builder().id(RECEIPT_ID).eventId(BIZ_EVENT_ID).eventData(EventData.builder().amount(FORMATTED_GRAND_TOTAL).cart(List.of(CartItem.builder().subject(REMITTANCE_INFORMATION).build())).build()).build();
+        TemplateDataMappingException e = assertThrows(TemplateDataMappingException.class, () -> buildTemplateService.buildTemplate(bizEventList, GENERATED_BY_PAYER, receipt));
 
         assertEquals(ReasonErrorCode.ERROR_TEMPLATE_PDF.getCode(), e.getStatusCode());
-        assertEquals(String.format(TemplateDataField.ERROR_MAPPING_MESSAGE, TemplateDataField.CART_ITEM_AMOUNT), e.getMessage());
+        assertEquals(String.format(TemplateDataField.ERROR_MAPPING_MESSAGE, BIZ_EVENT,TemplateDataField.CART_ITEM_AMOUNT, BIZ_EVENT, BIZ_EVENT_ID), e.getMessage());
+    }
+
+    @Test
+    void mapTemplateNoCartItemSubjectError() {
+        List<BizEvent> listOfBizEvents = Collections.singletonList(BizEvent.builder()
+                .id(BIZ_EVENT_ID)
+                .paymentInfo(PaymentInfo.builder()
+                        .IUR(IUR)
+                        .paymentDateTime(DATE_TIME_TIMESTAMP_MILLISECONDS_DST_WINTER)
+                        .remittanceInformation(REMITTANCE_INFORMATION)
+                        .build())
+                .psp(Psp.builder()
+                        .idPsp(ID_PSP)
+                        .psp(PSP_NAME)
+                        .build())
+                .payer(Payer.builder()
+                        .fullName(PAYER_FULL_NAME)
+                        .entityUniqueIdentifierValue(PAYER_VALID_CF)
+                        .build())
+                .debtorPosition(DebtorPosition.builder()
+                        .modelType(MODEL_TYPE_IUV_CODE)
+                        .iuv(IUV)
+                        .build())
+                .debtor(Debtor.builder()
+                        .entityUniqueIdentifierValue(DEBTOR_VALID_CF)
+                        .build())
+                .creditor(Creditor.builder()
+                        .companyName(COMPANY_NAME)
+                        .idPA(ID_PA)
+                        .build())
+                .transactionDetails(TransactionDetails.builder()
+                        .transaction(Transaction.builder()
+                                .grandTotal(GRAND_TOTAL_LONG).build()
+                        )
+                        .build()
+                )
+                .build());
+        TemplateDataMappingException e = assertThrows(TemplateDataMappingException.class, () ->
+                buildTemplateService.buildTemplate(listOfBizEvents, GENERATED_BY_PAYER, Receipt.builder().id(RECEIPT_ID).eventId(BIZ_EVENT_ID).eventData(
+                        EventData.builder().amount(FORMATTED_GRAND_TOTAL).cart(Collections.singletonList(CartItem.builder().build()))
+                                .debtorFiscalCode(DEBTOR_VALID_CF).build()).build()));
+
+        assertEquals(ReasonErrorCode.ERROR_TEMPLATE_PDF.getCode(), e.getStatusCode());
+        assertEquals(String.format(TemplateDataField.ERROR_MAPPING_MESSAGE, RECEIPT, TemplateDataField.CART_ITEM_SUBJECT, RECEIPT,RECEIPT_ID), e.getMessage());
+    }
+
+    @Test
+    void mapTemplateAllFieldsSuccessMultipleBizEvents() {
+        List<BizEvent> bizEventList = new ArrayList<>();
+        List<CartItem> cartItemList = new ArrayList<>();
+        for (int i = 0; i < 5; i++) {
+            bizEventList.add(
+                    BizEvent.builder()
+                            .id(BIZ_EVENT_ID + i)
+                            .idPaymentManager(BIZ_EVENT_ID)
+                            .debtorPosition(DebtorPosition.builder()
+                                    .iuv(IUV+i)
+                                    .modelType(MODEL_TYPE_IUV_CODE)
+                                    .build())
+                            .creditor(Creditor.builder()
+                                    .companyName(COMPANY_NAME)
+                                    .idPA(ID_PA)
+                                    .build())
+                            .psp(Psp.builder()
+                                    .idPsp(ID_PSP)
+                                    .psp(PSP_NAME)
+                                    .build())
+                            .debtor(Debtor.builder()
+                                    .fullName(DEBTOR_FULL_NAME)
+                                    .entityUniqueIdentifierValue(DEBTOR_VALID_CF)
+                                    .build())
+                            .payer(Payer.builder().fullName(PAYER_FULL_NAME).entityUniqueIdentifierValue(PAYER_VALID_CF).build())
+                            .paymentInfo(PaymentInfo.builder()
+                                    .paymentDateTime(DATE_TIME_TIMESTAMP_MILLISECONDS_DST_WINTER)
+                                    .paymentToken(PAYMENT_TOKEN)
+                                    .amount(AMOUNT_WITHOUT_CENTS)
+                                    .fee(FEE_WITH_SINGLE_DIGIT_CENTS)
+                                    .remittanceInformation(REMITTANCE_INFORMATION)
+                                    .IUR(IUR)
+                                    .build())
+                            .transactionDetails(TransactionDetails.builder()
+                                    .wallet(WalletItem.builder()
+                                            .info(Info.builder().brand(BRAND).holder(HOLDER_FULL_NAME).build())
+                                            .onboardingChannel(PAGO_PA_CHANNEL_IO)
+                                            .build())
+                                    .transaction(Transaction.builder()
+                                            .idTransaction(ID_TRANSACTION)
+                                            .grandTotal(GRAND_TOTAL_LONG)
+                                            .amount(AMOUNT_LONG)
+                                            .fee(FEE_LONG)
+                                            .rrn(RRN)
+                                            .numAut(AUTH_CODE)
+                                            .creationDate(DATE_TIME_TIMESTAMP_ZONED_DST_WINTER)
+                                            .psp(TransactionPsp.builder()
+                                                    .businessName(PSP_NAME)
+                                                    .build())
+                                            .origin(PAGOPA_PA_CHANNEL_ID)
+                                            .build())
+                                    .build())
+                            .eventStatus(BizEventStatusType.DONE)
+                            .build()
+            );
+
+            cartItemList.add(
+                    CartItem.builder().subject(REMITTANCE_INFORMATION + i).build()
+            );
+        }
+        Receipt receipt = Receipt.builder().eventId(String.valueOf(ID_TRANSACTION)).eventData(EventData.builder().amount(FORMATTED_GRAND_TOTAL).cart(cartItemList).build()).build();
+
+        AtomicReference<ReceiptPDFTemplate> atomicReference = new AtomicReference<>();
+        assertDoesNotThrow(() -> atomicReference.set(buildTemplateService.buildTemplate(bizEventList, GENERATED_BY_DEBTOR, receipt)));
+
+        ReceiptPDFTemplate receiptPdfTemplate = atomicReference.get();
+
+        assertNotNull(receiptPdfTemplate);
+        assertEquals(String.valueOf(ID_TRANSACTION), receiptPdfTemplate.getServiceCustomerId());
+
+        it.gov.pagopa.receipt.pdf.helpdesk.model.template.Transaction transaction = receiptPdfTemplate.getTransaction();
+        assertEquals(DATE_TIME_TIMESTAMP_FORMATTED_DST_WINTER, transaction.getTimestamp());
+        assertEquals(FORMATTED_GRAND_TOTAL, transaction.getAmount());
+        assertEquals(PSP_LOGO, transaction.getPsp().getLogo());
+        assertEquals(FORMATTED_FEE, transaction.getPsp().getFee().getAmount());
+        assertEquals(PSP_NAME, transaction.getPsp().getName());
+        assertEquals(PSP_CITY, transaction.getPsp().getCity());
+        assertEquals(PSP_COMPANY, transaction.getPsp().getCompanyName());
+        assertEquals(PSP_POSTAL_CODE, transaction.getPsp().getPostalCode());
+        assertEquals(PSP_ADDRESS, transaction.getPsp().getAddress());
+        assertEquals(PSP_BUILDING_NUMBER, transaction.getPsp().getBuildingNumber());
+        assertEquals(PSP_PROVINCE, transaction.getPsp().getProvince());
+        assertEquals(RRN, transaction.getRrn());
+        assertEquals(BRAND, transaction.getPaymentMethod().getName());
+        assertEquals(BRAND_ASSET_URL, transaction.getPaymentMethod().getLogo());
+        assertEquals(HOLDER_FULL_NAME, transaction.getPaymentMethod().getAccountHolder());
+        assertEquals(AUTH_CODE, transaction.getAuthCode());
+        assertEquals(GENERATED_BY_DEBTOR, transaction.isRequestedByDebtor());
+        assertTrue(transaction.isProcessedByPagoPA());
+
+        assertNull(receiptPdfTemplate.getUser());
+
+        it.gov.pagopa.receipt.pdf.helpdesk.model.template.Cart cart = receiptPdfTemplate.getCart();
+        String decurrenciedFormattedAmount = FORMATTED_AMOUNT.replace(".", "").replace(",", ".");
+        assertEquals(currencyFormat(String.valueOf(Double.parseDouble(decurrenciedFormattedAmount)*bizEventList.size())), cart.getAmountPartial());
+
+        for (int i = 0; i < bizEventList.size(); i++) {
+            assertEquals(FORMATTED_AMOUNT, cart.getItems().get(i).getAmount());
+            assertEquals(DEBTOR_FULL_NAME, cart.getItems().get(i).getDebtor().getFullName());
+            assertEquals(DEBTOR_VALID_CF, cart.getItems().get(i).getDebtor().getTaxCode());
+            assertEquals(REMITTANCE_INFORMATION+i, cart.getItems().get(i).getSubject());
+            assertEquals(COMPANY_NAME, cart.getItems().get(i).getPayee().getName());
+            assertEquals(ID_PA, cart.getItems().get(i).getPayee().getTaxCode());
+            assertEquals(MODEL_TYPE_IUV_TEXT, cart.getItems().get(i).getRefNumber().getType());
+            assertEquals(IUV+i, cart.getItems().get(i).getRefNumber().getValue());
+        }
+    }
+
+    private String currencyFormat(String value) {
+        BigDecimal valueToFormat = new BigDecimal(value);
+        NumberFormat numberFormat = NumberFormat.getInstance(Locale.ITALY);
+        numberFormat.setMaximumFractionDigits(2);
+        numberFormat.setMinimumFractionDigits(2);
+        return numberFormat.format(valueToFormat);
     }
 }
